# sparse

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  Dockerfile.graphs  Makefile  README.md  collect_statistics.py  make_graphs.py  pyproject.toml  requirements-client.txt  requirements-stats.txt  requirements-training.txt  requirements.txt  requirements_graphs.txt  requirements_jetson.txt  setup.py
dockerfiles/: Dockerfile.split_client.amd64  Dockerfile.split_client.jp461  Dockerfile.split_client.jp50  Dockerfile.split_server.amd64  Dockerfile.split_server.jp461  Dockerfile.split_server.jp50
k8s/: README.md  data_source.yaml  edge_clusterip.yaml  edge_deployment.yaml  inference_aio.yaml  inference_client.yaml  inference_datasource.yaml  inference_intermediate.yaml  inference_split_offloaded.yaml  inference_split_ondevice.yaml  inference_unsplit_aio.yaml  inference_unsplit_offloaded.yaml  inference_worker_clusterip.yaml  inference_worker_deployment.yaml  learning_aio.yaml  learning_client.yaml  learning_data_source.yaml  learning_datasource.yaml  learning_intermediate.yaml  learning_split_offloaded.yaml  learning_split_ondevice.yaml  learning_unsplit_aio.yaml  learning_unsplit_offloaded.yaml  learning_unsplit_worker.yaml  learning_worker.yaml  learning_worker_clusterip.yaml  learning_worker_deployment.yaml  learning_worker_nodeport.yaml  local_store.yaml  model_server.yaml  root_clusterip.yaml  root_deployment.yaml  sparse_monitor.yaml  split_learning.yaml  worker_clusterip.yaml  worker_deployment.yaml
scripts/: clean-experiment.sh  delete_worker.sh  (+6 more)
(+328 files in other folders)
